# nexus

./: .dev.vars.example  .gitignore  AGENTS.md  CLAUDE.md  COGS-REPORT.md  CONTRIBUTING.md  LAUNCH_READY.md  README.md  SECURITY-AUDIT.md  UX-AUDIT.md  blocked-stories.json  deploy.sh  package-lock.json  package.json  playwright.config.ts  prd.json  progress.txt  ralph-context.md  tsconfig.json  wrangler.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/python/: README.md  main.py  requirements.txt
examples/typescript/: README.md  index.ts  package.json
launch/: devto-article.md  playbook.md  producthunt.md  show-hn.md  social-posts.md
migrations/: 0001_schema.sql  0002_api_key_prefix.sql  0003_agents_unique_name.sql  0004_webhook_url.sql  0005_share_token.sql  0006_password_hash.sql  0007_cancel_at.sql  0008_subscriptions_created_at.sql
scripts/: embed-css.js  seed-demo.sql
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk-python/: README.md  pyproject.toml
sdk-python/nexus_agent/: __init__.py  client.py
sdk-python/tests/: test_client.py
sdk/src/: index.ts
src/: generated-styles.ts  index.ts  types.ts
src/lib/: alerts.ts  apiKeys.ts  auth.ts  liveRefresh.ts  webhooks.ts
src/middleware/: apiKeyAuth.ts  requireAuth.ts
src/pages/: agents.ts  api-reference.ts  billing.ts  blog.ts  changelog.ts  comparison.ts  dashboard.ts  demo.ts  docs.ts  guides.ts  keys.ts  landing.ts  legal.ts  login.ts  notFound.ts  pricing.ts  settings.ts  (+2 more)
tailwind/: output.css
test/: stripe-webhooks.ts
(+24 files in other folders)
